--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.10",
+    "@types/supertest": "^2.0.11",
     "jest": "^27.0.6",
+    "supertest": "^6.1.4",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
