--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-validator": "^6.12.1"
+    "express-validator": "^6.12.1",
+    "mongoose": "^5.13.5"
   }
 }
