--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc",
+    "swagger-autogen": "node doc/swagger.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:clearCache": "jest --clearCache"
@@ -26,8 +27,10 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.10",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^27.0.6",
     "supertest": "^6.1.4",
+    "swagger-autogen": "^2.11.2",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
@@ -36,6 +39,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "swagger-ui-express": "^4.1.6"
   }
 }
