doc - implement swagger-ui-express to serve generated swagger file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc",
-    "swagger-autogen": "node doc/swagger.js",
+    "swagger-autogen": "node src/doc/swagger.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:clearCache": "jest --clearCache"
