--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "build": "tsc",
+    "build": "npm run swagger-autogen && tsc",
     "swagger-autogen": "node src/doc/swagger.js",
     "test": "jest",
     "test:watch": "jest --watch",
