--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -3,9 +3,12 @@ on: [push]
 jobs: 
   run-test:
     runs-on: ubuntu-latest
+    env:
+      A_FULL_HOST: localhost:3000
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
       - run: npm install
+      - run: npm build
