--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -12,4 +12,4 @@ jobs:
           node-version: '14'
       - run: npm install
       - run: npm run build
-      - run: npm run test
+      - run: npm run log-vars
