--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       A_FULL_HOST: localhost:3000
+      A_MONGODB_PASSWORD: ${{secrets.A_MONGODB_PASSWORD}}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
