--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -4,8 +4,9 @@ jobs:
   run-test:
     runs-on: ubuntu-latest
     env:
-      A_FULL_HOST: localhost:3000
       A_MONGODB_PASSWORD: ${{secrets.A_MONGODB_PASSWORD}}
+      A_FIRST_NAME: 'marson'
+      A_FULL_HOST: localhost
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
